--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "pg-app",
+  "name": "postgres-db-app",
   "version": "0.1.0",
   "author": "Ahmet Kilinc",
   "license": "MIT",
-  "homepage": "https://github.com/ahmetskilinc/pg-app",
+  "homepage": "https://github.com/ahmetskilinc/postgres-db-app",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ahmetskilinc/pg-app.git"
+    "url": "https://github.com/ahmetskilinc/postgres-db-app.git"
   },
   "bugs": {
-    "url": "https://github.com/ahmetskilinc/pg-app/issues"
+    "url": "https://github.com/ahmetskilinc/postgres-db-app/issues"
   },
   "description": "PostgreSQL GUI client for local and cloud databases",
   "main": "out/main/index.js",
@@ -69,7 +69,7 @@
     "vite": "^5.4.11"
   },
   "build": {
-    "appId": "com.bruvimtired.pg-app",
+    "appId": "com.bruvimtired.postgres-db-app",
     "productName": "PG App",
     "directories": {
       "buildResources": "build",
@@ -113,7 +113,7 @@
     "publish": {
       "provider": "github",
       "owner": "ahmetskilinc",
-      "repo": "pg-app"
+      "repo": "postgres-db-app"
     }
   }
 }
