--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-virtual": "^3.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.468.0",
