--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+
       - name: Resolve release values
         id: vars
         shell: bash
@@ -64,7 +67,14 @@ jobs:
         shell: bash
         run: |
           VERSION="${{ steps.vars.outputs.version }}"
-          npm version "$VERSION" --no-git-tag-version
+          bun -e '
+          const fs = require("fs");
+          const version = process.argv[1];
+          const pkgPath = "package.json";
+          const pkg = JSON.parse(fs.readFileSync(pkgPath, "utf8"));
+          pkg.version = version;
+          fs.writeFileSync(pkgPath, `${JSON.stringify(pkg, null, 2)}\n`);
+          ' "$VERSION"
           if git diff --quiet -- package.json; then
             echo "No version file changes detected."
             exit 0
@@ -83,7 +93,7 @@ jobs:
         shell: bash
         run: |
           VERSION_FROM_TAG="${{ steps.vars.outputs.version }}"
-          VERSION_FROM_PACKAGE="$(node -p "require('./package.json').version")"
+          VERSION_FROM_PACKAGE="$(bun -e 'const fs = require("fs"); const pkg = JSON.parse(fs.readFileSync("package.json", "utf8")); process.stdout.write(pkg.version);')"
           if [[ "$VERSION_FROM_TAG" != "$VERSION_FROM_PACKAGE" ]]; then
             echo "Tag version ($VERSION_FROM_TAG) does not match package.json version ($VERSION_FROM_PACKAGE)."
             exit 1
@@ -122,25 +132,27 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile=false
 
       - name: Build app bundles
-        run: npm run build
+        run: bun run build
 
       - name: Build macOS installer
         if: matrix.os == 'macos-latest'
-        run: npx electron-builder --mac dmg --publish never -c.mac.identity=null
+        run: bunx electron-builder --mac dmg --publish never -c.mac.identity=null
 
       - name: Build Windows installer
         if: matrix.os == 'windows-latest'
-        run: npx electron-builder --win nsis --publish never
+        run: bunx electron-builder --win nsis --publish never
 
       - name: Build Linux installer
         if: matrix.os == 'ubuntu-latest'
-        run: npx electron-builder --linux AppImage --publish never
+        run: bunx electron-builder --linux AppImage --publish never
 
       - name: Upload packaged artifacts
         uses: actions/upload-artifact@v4
