--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
       "out/**/*"
     ],
     "mac": {
+      "icon": "icon.png",
       "target": [
         {
           "target": "dmg",
@@ -93,6 +94,7 @@
       "darkModeSupport": true
     },
     "win": {
+      "icon": "icon.png",
       "target": [
         {
           "target": "nsis",
@@ -103,6 +105,7 @@
       ]
     },
     "linux": {
+      "icon": "icon.png",
       "target": [
         "AppImage"
       ],
